# crypto-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/: news_brief.json
notebooks/: backtest_results.ipynb  decision_now.ipynb
scripts/: backfill_history.py  decide_now.py  snapshot_now.py
src/crypto_analysis/: __init__.py  backtest.py  config.py  decision.py  engine.py  greeks.py  http.py  indicators.py  news_fetcher.py  storage.py
src/crypto_analysis/collectors/: deribit.py  exchanges.py  macro.py  onchain.py
src/crypto_analysis/signals/: __init__.py  basis.py  funding.py  gex.py  iv_skew.py  liquidations.py  macro.py  news.py  oi.py  onchain.py  option_skew.py  orderbook.py  spot_futures.py
