[project]
name = "crypto-analysis"
version = "0.1.0"
description = "Deribit BTC futures + on-chain integrated analysis"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=16",
  "duckdb>=1.0",
  "plotly>=5.22",
  "jupyterlab>=4.2",
  "python-dotenv>=1.0",
  "tenacity>=8.3",
  "yfinance>=0.2.40",
  "streamlit>=1.36",
  "feedparser>=6.0",
  "google-genai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_analysis"]
